crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const boolDefaults = pgTable("bool_defaults", {
  id: integer("id").primaryKey(),
  isDeleted: boolean("is_deleted").notNull().default(false),
});
