crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type BoolDefaults struct {
	ID        int32 `gorm:"column:id;primaryKey" json:"id"`
	IsDeleted bool  `gorm:"column:is_deleted;not null;default:false" json:"is_deleted"`
}

func (BoolDefaults) TableName() string { return "bool_defaults" }
