crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model BoolDefaults {
  id Int @id
  is_deleted Boolean @default(false)

  @@map("bool_defaults")
}
