crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_SqlAlchemy.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlalchemy import Boolean, Integer
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column


class BoolDefaults(DeclarativeBase):
    __tablename__ = "bool_defaults"

    id: Mapped[int] = mapped_column(Integer, primary_key=True)
    is_deleted: Mapped[bool] = mapped_column(Boolean, nullable=False, server_default="false")
