crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__false_boolean_default_snapshot@false_boolean_default_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations


from sqlmodel import Field, SQLModel


class BoolDefaults(SQLModel, table=True):
    __tablename__ = "bool_defaults"

    id: int = Field(primary_key=True)
    is_deleted: bool = Field(default=False)
