crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__fk_names_collide_after_id_strip_snapshot@fk_names_collide_after_id_strip_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type Target struct {
	ID        int32 `gorm:"column:id;primaryKey" json:"id"`
	Alt       int32 `gorm:"column:alt;not null;unique" json:"alt"`
	SrcsByAID []Src `gorm:"foreignKey:AID" json:"-"`
	SrcsByA   []Src `gorm:"foreignKey:A;references:Alt" json:"-"`
}

func (Target) TableName() string { return "target" }

type Src struct {
	Pk      int32   `gorm:"column:pk;primaryKey" json:"pk"`
	AID     *int32  `gorm:"column:a_id" json:"a_id"`
	A2      *Target `gorm:"foreignKey:AID" json:"-"`
	A       *int32  `gorm:"column:a" json:"a"`
	ATarget *Target `gorm:"foreignKey:A;references:Alt" json:"-"`
}

func (Src) TableName() string { return "src" }
